# Solvency-II-Regulatory-Search

./: .gitignore  LICENSE  Qwen3Reranker.py  README.md  convert-to-images.py  create_basic_vector_store.ipynb  create_vector_store.ipynb  data-ingestion-pipeline.ipynb  data-preprocessing-pipeline.ipynb  document-preprocessing-pipeline.ipynb  environment.yml  equation-research.ipynb  model_config.py  model_integrations.py  pdf-server.py  prompt.json  pyproject.toml  quality-performance-test.py  regulatory-search-app.py  regulatory-search.py  reranker.ipynb  test.md
.streamlit/: config.toml
crawler/: download-guidelines.py  quick-parser.py  rss-feed.py  test.py
crawler/entries/: feed-entries.json
crawler/intermediate_results/: dedeuplicated_urls.json
crawler/test/: test
custom-streamlit-components/open_pdf_button/: app.py  setup.py
data/chunking-step-1/: chunks-with-page-numbers.txt  markdown_splits.txt  solvency II - level 2.pdf.md  split_result.md
data/enrich-step-1/: enriched_chunks-with-page-numbers.txt
data/intermediate-save/: chunks-with-page-numbers.txt  markdown_splits.txt  solvency-II-files-docs-2025-07-16_14-52-14.pkl  solvency-II-files-docs-2025-07-16_18-04-58.pkl  solvency-II-files-docs-2025-08-21_17-22-00.pkl
data/preprocessed-step-2/: processed_text.md
demo-sessionstates/: arthur-afkortingen.json  arthur-rekenvoorbeeld.json
experiment-logs/: create-experiment-dataset.py  participants.jsonl
experiment-logs/company_demo/: 40-d08be9cb-f3b5-4c5e-a103-03eac8fae29e.json  41-6c6ef795-7ebe-467c-9b2a-0cc88125cb68.json  42-6c6ef795-7ebe-467c-9b2a-0cc88125cb68.json  43-6c6ef795-7ebe-467c-9b2a-0cc88125cb68.json
experiment-logs/excluded-duplicate-participant-6/: 64-601835de-2c46-4b67-b63f-633e720c8df5.json  backup-601835de-2c46-4b67-b63f-633e720c8df5.json
experiment-logs/no-participants/: 75-8f33e6dd-5b3f-4c5e-a26d-d66e9776ffaa.json
experiment-logs/participant-1/: 1-f0fdf43f-4856-4635-a08e-add0a0c571a0.json  (+12 more)
experiment-output/: Output LLM.docx  o4-mini-on-data-quality-output.txt  pypdf4llm-on-data-quality-output-SINGLE-TWO-DOCUMENTS-v2.md  pypdf4llm-on-data-quality-output-SINGLE-v2.md  pypdf4llm-on-data-quality-output-SINGLE.md  pypdf4llm-on-data-quality-output.txt  rapid-ocr-on-data-quality-output.txt  ~$tput LLM.docx
log/: prompt.json
models/: model_config.py  model_integrations.py
prompt/: data_kwaliteit_generation_instructions.md  solvency_II_instructions.md
research/: equation-research.ipynb  reranker-research.ipynb  table-research.ipynb
(+339 files in other folders)
