[project]
name = "regulation-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langchain-openai>=0.3.14",
    "langchain-pymupdf4llm>=0.3.1",
    "langchain-text-splitters>=0.3.8",
    "onnxruntime>=1.21.1",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "rapidocr>=2.0.7",
    "rapidocr-onnxruntime>=1.4.4",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
