[project]
name = "regulation-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # https://github.com/googlecolab/colabtools/issues/5455 incompatibility with langchain-cohere==0.4.4
    "cohere<=5.15.0",
    "langchain-aws>=0.2.30",
    "langchain-chroma>=0.2.3",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.22",
    "langchain-docling>=0.2.0",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.14",
    "langchain-pymupdf4llm>=0.3.1",
    "langchain-text-splitters>=0.3.8",
    "langchain-xai>=0.2.3",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.10.5",
    "mdit-py-plugins>=0.5.0",
    "onnxruntime>=1.21.1",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "rapidocr>=2.0.7",
    "rapidocr-onnxruntime>=1.4.4",
    "streamlit>=1.47.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
